--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -44,7 +44,7 @@
         <h1>
           <a href="https://prof-wade.com/">Wade Fagen-Ulmschneider</a>
         </h1>
-        <h2>Teaching Assistant Professor, Computer Science</h2>
+        <h2>Teaching Associate Professor, Computer Science</h2>
         <div style="font-size: 16px;">
           Connect with me: 
           <a href="https://instagram.com/profwade" target="_blank"><i class="ion-social-instagram"></i></a>
