--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -42,18 +42,18 @@
     <div class="container-fluid header header-content">
       <div class="container">
         <h1>
-          <a href="https://prof-wade.com/">Wade Fagen-Ulmschneider</a>
+          <a href="https://waf.cs.illinois.edu/">Wade Fagen-Ulmschneider</a>
         </h1>
         <h2>Teaching Associate Professor, Computer Science</h2>
         <div style="font-size: 16px;">
           Connect with me: 
-          <a href="https://instagram.com/profwade" target="_blank"><i class="ion-social-instagram"></i></a>
-          &middot;
-          <a href="https://www.facebook.com/fagen" target="_blank"><i class="ion-social-facebook"></i></a>
-          &middot;
           <a href="https://twitter.com/prof-wade" target="_blank"><i class="ion-social-twitter"></i></a>
           &middot;
           <a href="https://www.linkedin.com/in/wadefagen" target="_blank"><i class="ion-social-linkedin"></i></a>
+          &middot;
+          <a href="https://instagram.com/profwade" target="_blank"><i class="ion-social-instagram"></i></a>
+          &middot;
+          <a href="https://www.facebook.com/fagen" target="_blank"><i class="ion-social-facebook"></i></a>
           &middot;
           <a href="https://github.com/wadefagen" target="_blank"><i class="ion-social-github"></i></a>
         </div>
