--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title }} | Wade Fagen-Ulmschneider</title>
+    <title>{{% if page.title %}}{{ page.title }} | {{% endif %}}Wade Fagen-Ulmschneider</title>
 
     <meta property="og:title" content="{{ page.title }}">
     <meta name="twitter:title" content="{{ page.title }}" />
@@ -47,7 +47,7 @@
         <h2>Teaching Associate Professor, Computer Science</h2>
         <div style="font-size: 16px;">
           Connect with me: 
-          <a href="https://twitter.com/prof-wade" target="_blank"><i class="ion-social-twitter"></i></a>
+          <a href="https://twitter.com/profwade_" target="_blank"><i class="ion-social-twitter"></i></a>
           &middot;
           <a href="https://www.linkedin.com/in/wadefagen" target="_blank"><i class="ion-social-linkedin"></i></a>
           &middot;
