--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -49,7 +49,7 @@
           Connect with me: 
           <a href="https://twitter.com/profwade_" target="_blank"><i class="ion-social-twitter"></i></a>
           &middot;
-          <a href="https://www.linkedin.com/in/wadefagen" target="_blank"><i class="ion-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/profwade" target="_blank"><i class="ion-social-linkedin"></i></a>
           &middot;
           <a href="https://instagram.com/profwade" target="_blank"><i class="ion-social-instagram"></i></a>
           &middot;
