--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{% if page.title %}}{{ page.title }} | {{% endif %}}Wade Fagen-Ulmschneider</title>
+    <title>{% if page.title %}{{ page.title }} | {% endif %}Wade Fagen-Ulmschneider</title>
 
     <meta property="og:title" content="{{ page.title }}">
     <meta name="twitter:title" content="{{ page.title }}" />
