--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -46,20 +46,16 @@
         </h1>
         <h2>Teaching Associate Professor, Computer Science</h2>
         <div style="font-size: 16px;">
-          Connect with me: 
-          <a href="https://twitter.com/profwade_" target="_blank"><i class="ion-social-twitter"></i></a>
+          Follow: 
+          <a href="https://twitter.com/profwade_" target="_blank"><i class="ion-social-twitter mr-1"></i>@profwade_</a>
           &middot;
-          <a href="https://www.linkedin.com/in/profwade" target="_blank"><i class="ion-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/profwade" target="_blank"><i class="ion-social-linkedin mr-1"></i>profwade</a>
           &middot;
-          <a href="https://instagram.com/profwade" target="_blank"><i class="ion-social-instagram"></i></a>
-          &middot;
-          <a href="https://www.facebook.com/fagen" target="_blank"><i class="ion-social-facebook"></i></a>
-          &middot;
-          <a href="https://github.com/wadefagen" target="_blank"><i class="ion-social-github"></i></a>
+          <a href="https://github.com/wadefagen" target="_blank"><i class="ion-social-github mr-1"></i>wadefagen</a>
         </div>
       </div>
     </div>
-    
+
     {{content}}
 
     <script>
