initial work on v2021

--- a/static/css/waf.css
+++ b/static/css/waf.css
@@ -1,32 +1,41 @@
+body {
+  font-size: 20px;
+  background-color: #F8FAFC;
+  font-family: 'Lato', sans-serif;
+}
+
+a {
+  color: #DD3403;
+}
+
+/* == header == */
+
 .header {
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
 .header-content {
-  background-color: hsl(173, 30%, 95%);
-  border-bottom: solid 1px hsl(173, 30%, 50%);
-}
-
-.footer {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  border-top: solid 1px hsl(173, 30%, 50%);
-  margin-top: 40px;
+  /*background-color: hsl(173, 30%, 95%);*/
+  background-color: #13294B;
+  color: white;
+  border-bottom: solid 1px #1E3877;
 }
 
 .header-content a {
-  color: hsl(173, 30%, 40%);
+  color: #AFC7DB;
 }
 
 .header-content h1 {
   font-size: 1.75rem;
   margin: 0px;
+  font-weight: bold;
 }
 
 .header-content h1 a {
-  color: black;
+  color: #AFC7DB;
 }
+
 
 .header-content h1 a:hover {
   text-decoration: none;
@@ -44,6 +53,15 @@
 .header-content h4 {
   font-size: 1.2rem;
 }
+
+
+.footer {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-top: solid 1px hsl(173, 30%, 50%);
+  margin-top: 40px;
+}
+
 
 .breadcrumb {
   margin-bottom: 0px;
@@ -92,20 +110,19 @@ div.content-covid-analysis a {
 
 
 hr {
-  border-color: hsl(173, 30%, 20%);
+  border-color: #13294B;
   border-style: dashed;
   margin: 16px 0px;
 }
 
 .content h1 {
   font-family: 'Playfair Display', serif;
-  background-color: white;
-  color: hsl(173, 30%, 20%);
+  color: #13294B;
   margin-bottom: 20px;
 }
 
 .content h2 {
-  background-color: hsl(173, 30%, 20%);
+  background-color: #13294B;
   color: white;
   font-family: 'Playfair Display', serif;
   display: inline-block;
@@ -117,7 +134,7 @@ hr {
 h3 {
   font-family: 'Playfair Display', serif;
   font-size: 1.5rem;
-  color: hsl(173, 30%, 20%);
+  color: #13294B;
 }
 
 h4 {
@@ -302,4 +319,4 @@ a.card {
 
 ul.pub-list { margin-top: -12px; }
 ul.pub-list > li { line-height: 1.1; margin-bottom: 3px; }
-.pub-etc { font-size: 0.8rem; }
+.pub-etc { font-size: 90%; }
