ashley + catherine improvfements

--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -46,6 +46,7 @@
   <body>
     <div class="container-fluid header header-content">
       <div class="container">
+        <img style="height: 90px; float: right; position: relative; top: -5px;" src="/static/kno2.png">
         <h1>
           <a href="https://waf.cs.illinois.edu/">Wade Fagen-Ulmschneider</a>
         </h1>
@@ -60,6 +61,7 @@
         </div>
       </div>
     </div>
+
 
     {{content}}
 
