--- a/_layouts/viz.html
+++ b/_layouts/viz.html
@@ -6,11 +6,7 @@ layout: min
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/">waf.cs</a></li>
-
-        {% if page.collection %}
-        <li class="breadcrumb-item"><a href="/{{ page.collection }}/">{{ page.collection | capitalize }}</a></li>
-        {% endif %}
-
+        <li class="breadcrumb-item"><a href="/visualizations/">visualizations</a></li>
         <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
       </ol>
     </nav>
@@ -27,11 +23,7 @@ layout: min
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/">waf.cs</a></li>
-
-        {% if page.collection %}
-        <li class="breadcrumb-item"><a href="/{{ page.collection }}/">{{ page.collection | capitalize }}</a></li>
-        {% endif %}
-
+        <li class="breadcrumb-item"><a href="/visualizations/">visualizations</a></li>
         <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
       </ol>
     </nav>
