--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -6,6 +6,7 @@ layout: min
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/">waf.cs</a></li>
+        <li class="breadcrumb-item"><a href="/tools/">Tools</a></li>
         <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
       </ol>
     </nav>
