--- a/_layouts/slides.html
+++ b/_layouts/slides.html
@@ -5,7 +5,7 @@ layout: bare
   <div class="container">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/">Home</a></li>
+        <li class="breadcrumb-item"><a href="/">waf.cs</a></li>
 
         <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
       </ol>
