--- a/_layouts/tool2.html
+++ b/_layouts/tool2.html
@@ -1,19 +1,14 @@
 ---
-layout: bare
+layout: min
 ---
 <div class="container-fluid header-content">
   <div class="container">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/">waf.cs</a></li>
-
-        {% if page.collection %}
-        {% if page.base == false %}
-        <li class="breadcrumb-item"><a href="/{{ page.collection }}/">{{ page.collection | capitalize }}</a></li>
-        {% endif %}
-        {% endif %}
-
-        <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
+        <li class="breadcrumb-item"><a href="/tools/">Tools</a></li>
+        <li class="breadcrumb-item"><a href="{{ page.toolURL }}">{{ page.toolName }}</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{{ page.shortTitle }}</li>
       </ol>
     </nav>
   </div>
@@ -24,18 +19,15 @@ layout: bare
   {{ content }}
 </div>
 
+<!--
 <div class="container-fluid footer header-content">
   <div class="container">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/">waf.cs</a></li>
-
-        {% if page.collection %}
-        <li class="breadcrumb-item"><a href="/{{ page.collection }}/">{{ page.collection | capitalize }}</a></li>
-        {% endif %}
-
         <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
       </ol>
     </nav>
   </div>
 </div>
+-->
