--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -8,7 +8,7 @@ layout: min
     <h1>
       <a href="https://waf.cs.illinois.edu/">Wade Fagen-Ulmschneider</a>
     </h1>
-    <h2>Teaching Associate Professor, Computer Science</h2>
+    <h2>Teaching Professor, Computer Science</h2>
     <div style="font-size: 16px;">
       Follow: 
       <a href="https://twitter.com/profwade_" target="_blank"><i class="ion-social-twitter mr-1"></i>@profwade_</a>
