--- a/_layouts/min.html
+++ b/_layouts/min.html
@@ -18,8 +18,8 @@
     <meta property="og:description" content="{{ page.description | escape }}">
     <meta name="twitter:description" content="{{ page.description | escape }}">
 
-    <meta property="og:url" content="{{ page.url | absolute_url }}">
-    <link rel=”canonical” href="{{ page.url | absolute_url }}">
+    <meta property="og:url" content="{{ page.url }}">
+    <link rel=”canonical” href="{{ page.url }}">
 
     {% if page.social-img %}
     <meta property="og:image" content="{{ page.social-img }}">
