--- a/_layouts/viz.html
+++ b/_layouts/viz.html
@@ -7,12 +7,11 @@ layout: min
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/">waf.cs</a></li>
         <li class="breadcrumb-item"><a href="/visualizations/">visualizations</a></li>
-        <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
+        <li class="breadcrumb-item active" aria-current="page">{{ title }}</li>
       </ol>
     </nav>
   </div>
 </div>
-
 
 <div class="container content">
   {{ content }}
@@ -24,7 +23,7 @@ layout: min
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/">waf.cs</a></li>
         <li class="breadcrumb-item"><a href="/visualizations/">visualizations</a></li>
-        <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
+        <li class="breadcrumb-item active" aria-current="page">{{ title }}</li>
       </ol>
     </nav>
   </div>
