--- a/_layouts/min.html
+++ b/_layouts/min.html
@@ -23,8 +23,8 @@
     <link rel=”canonical” href="{{ page.url }}">
 
     {% if social-img %}
-    <meta property="og:image" content="{{ social-img }}">
-    <meta name="twitter:image" content="{{ social-img }}">
+    <meta property="og:image" content="https://waf.cs.illinois.edu/{{page.url}}{{ social-img }}">
+    <meta name="twitter:image" content="https://waf.cs.illinois.edu/{{page.url}}{{ social-img }}">
     {% endif %}
     
     <link rel="icon" type="image/png" href="/static/waf.png">
